--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <form onsubmit="translateText(event)">
         <row-nogap>
             <textarea id="user-input" class="input-1" placeholder="From"></textarea>
-            <p id="user-output" class="input-2 icon"><i style="color: #9b9b9b; font-style: normal;">To</i></p>
+            <p id="user-output" class="input-2 icon" style="color: #212121;"><i style="color: #9b9b9b; font-style: normal;">To</i></p>
         </row-nogap>
         <row>
             <h3 class="bi bi-clipboard icon none"></h3>
@@ -266,7 +266,7 @@
                 <h2 class="bi bi-youtube"></h2>
             </a>
         </row>
-        <p class="center">Thanks For Visiting Regards! Muhammad Ahad&copy;</p>
+        <p class="center" style="color: #212121;">Thanks For Visiting Regards! Muhammad Ahad&copy;</p>
     </footer>
     <!-- javascript -->
     <script src="./main.js"></script>
