--- a/index.html
+++ b/index.html
@@ -26,12 +26,8 @@
 </head>
 
 <body>
-    <div class="form-check form-switch check-box">
-        <input class="form-check-input check" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked>
-        <label class="form-check-label" for="flexSwitchCheckChecked">Light <i class="bi bi-sun-fill"></i></label>
-    </div>
 
-    <h1 class="center">Translation App</h1>
+    <h1 class="center" style="font-weight: bold;">Translation App</h1>
     <p class="center">You Can Translate Any Language</p>
 
     <form onsubmit="translateText(event)">
@@ -266,7 +262,7 @@
                 <h2 class="bi bi-youtube"></h2>
             </a>
         </row>
-        <p class="center" style="color: #212121;">Thanks For Visiting Regards! Muhammad Ahad&copy;</p>
+        <p class="center" style="color: #fff;">Thanks For Visiting Regards! Muhammad Ahad&copy;</p>
     </footer>
     <!-- javascript -->
     <script src="./main.js"></script>
