--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800;900&display=swap" rel="stylesheet">
     <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- animation -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- css -->
@@ -34,10 +33,10 @@
         <form onsubmit="translateText(event)">
             <row-nogap>
                 <textarea id="user-input" class="input-1" placeholder="From"></textarea>
-                <p id="user-output" class="input-2 icon" style="color: #212121;"><i
-                        style="color: #9b9b9b; font-style: normal;">To</i></p>
+                <p id="user-output" class="input-2 icon" style="color: #212121;"><i style="color: #9b9b9b; font-style: normal;">To</i></p>
             </row-nogap>
             <row>
+                <h3 class="bi bi-volume-up-fill icon none" onclick="speakInput()"></h3>
                 <h3 class="bi bi-clipboard icon none" onclick="copyInput()"></h3>
                 <select id="source-language">
                     <option value="en-GB" selected>English</option>
@@ -68,7 +67,7 @@
                     <option value="eu-ES">Basque</option>
                     <option value="fa-IR">Persian</option>
                     <option value="fi-FI">Finnish</option>
-                    <option value="fn-FNG">Fanagalo</option>
+                    <option value="fn-FNG">Fanagalo</option
                     <option value="fo-FO">Faroese</option>
                     <option value="gl-ES">Galician</option>
                     <option value="gu-IN">Gujarati</option>
@@ -139,7 +138,8 @@
                     <option value="zu-ZA">Zulu</option>
                 </select>
 
-                <h3 class="bi bi-arrow-left-right icon"></h3>
+                <h3 class="bi bi-arrow-left-right icon convert-right-left"></h3>
+                <h3 class="bi bi-arrow-down-up icon convert-up-down"></h3>
 
                 <select id="target-language">
                     <option value="en-GB">English</option>
@@ -242,7 +242,17 @@
                 </select>
 
                 <h3 class="bi bi-clipboard icon none" onclick="copyPara()"></h3>
-
+                <h3 class="bi bi-volume-up-fill icon none" onclick="speakPara()"></h3>
+            </row>
+            <row class="mobile">
+                <row>
+                    <h3 class="bi bi-clipboard icon" onclick="copyInput()"></h3>
+                    <h3 class="bi bi-volume-up-fill icon" onclick="speakInput()"></h3>
+                </row>
+                <row>
+                    <h3 class="bi bi-clipboard icon " onclick="copyPara()"></h3>
+                    <h3 class="bi bi-volume-up-fill icon" onclick="speakPara()"></h3>
+                </row>
             </row>
             <button class="button" type="submit">Translate</button>
         </form>
@@ -270,10 +280,9 @@
     <!-- javascript -->
     <script src="./main.js"></script>
     <!-- bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <!-- speak CDN -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/web-speech-api/0.1.1/speech-api.js"></script> -->
 </body>
 
 </html>
